--- a/deployments/tcp-single/values/problem2.yaml
+++ b/deployments/tcp-single/values/problem2.yaml
@@ -14,7 +14,7 @@ image:
   repository: acrpipe.azurecr.io/problem2
   pullPolicy: IfNotPresent
   # Please increment tag
-  tag: latest
+  tag: "1"
 
 appLabel: problem2
 genreLabel: pwn
